# NewProject

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: helloworld.h
lib/src/: helloworld.cpp
lib/test/: helloworld.test.cpp
